--- a/styles.css
+++ b/styles.css
@@ -75,10 +75,16 @@ body {
     button {
       background-color: transparent;
       border: 0;
+      cursor: url("assets/cursors/white_die.png"), auto;
       img {
         width: 164px;
         height: 164px;
       }
+    }
+
+    button:hover {
+      -webkit-animation: headShake 0.4s;
+      animation: headShake 0.4s;
     }
   }
 
@@ -96,5 +102,46 @@ body {
     align-self: center;
     width: 164px;
     height: 164px;
+  }
+}
+
+@-webkit-keyframes headShake {
+  0% {
+    transform: translateX(0);
+  }
+  6.5% {
+    transform: translateX(-6px) rotateY(-9deg);
+  }
+  18.5% {
+    transform: translateX(5px) rotateY(7deg);
+  }
+  31.5% {
+    transform: translateX(-3px) rotateY(-5deg);
+  }
+  43.5% {
+    transform: translateX(2px) rotateY(3deg);
+  }
+  50% {
+    transform: translateX(0);
+  }
+}
+@keyframes headShake {
+  0% {
+    transform: translateX(0);
+  }
+  6.5% {
+    transform: translateX(-6px) rotateY(-9deg);
+  }
+  18.5% {
+    transform: translateX(5px) rotateY(7deg);
+  }
+  31.5% {
+    transform: translateX(-3px) rotateY(-5deg);
+  }
+  43.5% {
+    transform: translateX(2px) rotateY(3deg);
+  }
+  50% {
+    transform: translateX(0);
   }
 }
